--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,2 +1,8 @@
 @import "./reset";
 @import "./style";
+@import "./modules/header.scss";
+
+.content{
+  background-image: url("/assets/top-banner-kusanagi.jpg");
+  height: 390px;
+}
