--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,5 +10,7 @@
 
     %link{href: "https://fonts.googleapis.com/css?family=Source+Sans+Pro", rel: "stylesheet"}/
 
+    %link{href: "https://use.fontawesome.com/releases/v5.0.8/css/all.css", rel: "stylesheet"}/
+
   %body
     = yield
