--- a/app/assets/stylesheets/modules/header.scss
+++ b/app/assets/stylesheets/modules/header.scss
@@ -1,48 +1,5 @@
 @import "../mixin/mixin.scss";
 
-a:-webkit-any-link {
-    color: -webkit-link;
-    cursor: pointer;
-    text-decoration: underline;
-}
-
-a{
-  text-decoration: none !important;
-}
-
-img{
-  vertical-align: middle;
-}
-
-input[type='search'] {
-    -webkit-appearance: none;
-}
-
-input{
-  border-radius: 4px;
-  border: 1px solid #ccc;
-  line-height: 1.5;
-  font-size: 16px;
-}
-
-
-div{
-  display: block;
-}
-
-i{
-    display: inline-block;
-    font-family: 'icon-font';
-    speak: none;
-    font-style: normal;
-    font-weight: 400;
-    font-variant: normal;
-    text-transform: none;
-    line-height: 1;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-}
-
 .header{
   display: block;
   position: relative;
@@ -97,9 +54,7 @@ i{
           padding: 0;
         }
         li{
-          position: relative;
-          display: inline-block;
-          padding: 0 0 0 16px;
+          @include header_list;
         }
         h2{
           font-weight: 400;
@@ -121,10 +76,8 @@ i{
           padding: 0;
         }
         li{
-          position: relative;
-          display: inline-block;
+          @include header_list;
           vertical-align: middle;
-          padding: 0 0 0 16px;
         }
         &-user{
           margin: 0;
